feat: vocabulary api (#1)
